# serializer version: 1
# name: test_account[account]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root account [OPTIONS] COMMAND [ARGS]...
      
       Account commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ login    Login with email and password.                                      │
      │ info     Show account info.                                                  │
      │ token    Show account token.                                                 │
      │ logout   Logout and clear session.                                           │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_account[account_info]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Account info:
      Key                           | Value
      ---------------------------------------------
      SUREPCCLI_SELECTED_DEVICE     | not set
      SUREPCCLI_SELECTED_PET        | not set
      SUREPCCLI_CLIENT_ID           | validClientId
      SUREPCCLI_HOUSEHOLD_ID        | not set
      SUREPCCLI_SELECTED_PRODUCT_ID | not set
    ''',
  })
# ---
# name: test_account[account_logout]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': 'You have been logged out.',
  })
# ---
# name: test_account[account_token]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': 'validToken',
  })
# ---
# name: test_login[account_login_aemail0]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Password:
      Logged in as aemail.
    ''',
  })
# ---
# name: test_login[account_login_aemail1]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Password:
      Logged in as aemail.
    ''',
  })
# ---
